# Routes/attendanceRoute.js
@@ -1,0 +1,10 @@
+const express = require('express');
+const routes = express.Router();
+
+const attendanceRoute = require('../Controller/attendanceContro')
+
+routes.post('/checkIn', attendanceRoute.checkIn);
+routes.post('/checkOut', attendanceRoute.checkOut)
+routes.get('/getAll', attendanceRoute.getAll)
+
+module.exports = routes;
